src/objects/cpm__Mandate_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>cpm__Last_Status_Reason__c</fullName>
        <label>Last Status Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Processing_Date__c</fullName>
        <label>Processing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Generated</fullName>
                </value>
                <value>
                    <fullName>Pending Verification</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Sub_Type__c</fullName>
        <description>Information field only, populated by a trigger</description>
        <label>Sub Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Target__c</fullName>
        <label>Target</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NCT Membership Collections - S18</fullName>
                </value>
                <value>
                    <fullName>NCT Course Fee Collections - S18</fullName>
                </value>
                <value>
                    <fullName>NCT Training Fee Collections - S18</fullName>
                </value>
                <value>
                    <fullName>ABN 5</fullName>
                </value>
                <value>
                    <fullName>BLA</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Mandate Schedule</label>
    <listViews>
        <fullName>cpm__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MS-{0}</displayFormat>
        <label>Mandate Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mandate Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>cpm__ProcessingDate_must_be_in_the_future</fullName>
        <active>true</active>
        <errorConditionFormula>IF (cpm__Processing_Date__c &lt;= TODAY(), true, false )</errorConditionFormula>
        <errorDisplayField>cpm__Processing_Date__c</errorDisplayField>
        <errorMessage>Prcocessing Date must be in the future</errorMessage>
    </validationRules>
</CustomObject>